2018-06-30  Tom Tromey  <tom@tromey.com>

	* symfile.c (symbol_file_add_with_addrs): Update.
	* objfiles.h (struct objfile) <objfile>: Add "parent" argument.
	(add_separate_debug_objfile): Don't declare.
	(class objfile_iterable) <iterator>: Now a struct.
	<begin, end>: Update.
	(objfile_and_objsection_iterable::objfile_and_objsection_iterable):
	Update.
	* objfiles.c (objfile::objfile): Take "parent" argument.
	(unlink_objfile): Add "files" argument.
	(put_objfile_before, add_separate_debug_objfile): Remove.
	(free_all_objfiles, ~objfile): Update.
	* jit.c (jit_inferior_exit_hook): Update.

2018-06-30  Tom Tromey  <tom@tromey.com>

	* symtab.c (matching_obj_sections)
	(lookup_global_symbol_from_objfile)
	(lookup_symbol_in_objfile_from_linkage_name): Update.
	* symfile.c (read_symbols): Update.
	* objfiles.h (struct objfile) <separate_debug_objfiles>: Now a
	std::list.
	<separate_debug_objfile_link>: Remove.
	(objfile_separate_debug_iterate): Don't declare.
	(struct objfile_separate_debug_iterable): New.
	* objfiles.c (objfile_separate_debug_iterate): Remove.
	(add_separate_debug_objfile, free_objfile_separate_debug)
	(objfile::~objfile, objfile_relocate, objfile_rebase)
	(objfile_has_symbols, preferred_obj_section)
	(filter_debuginfo_sections): Update.
	* minsyms.c (lookup_minimal_symbol_by_pc_section): Update.
	* elfread.c (elf_symfile_read): Update.

2018-06-30  Tom Tromey  <tom@tromey.com>

	* progspace.h (struct program_space) <objfiles>: Now a std::list.
	* objfiles.h (struct objfile) <next>: Remove.
	(put_objfile_before, unlink_objfile): Don't declare.
	(objfile_iterable::iterator): Now a typedef.
	(objfile_iterable::begin, objfile_iterable::end): Update.
	(MULTI_OBJFILE_P): Rewrite.
	* objfiles.c (objfile::objfile): Update.
	(unlink_objfile): Update.  Move earlier.  Now static.
	(put_objfile_before): Update.  Now static.
	(free_all_objfiles): Clear objfiles.
	(objfile_purge_solibs): Update.

2018-06-30  Tom Tromey  <tom@tromey.com>
