@@ -2374,12 +2374,6 @@ reread_symbols (void)
   int res;
   std::vector<struct objfile *> new_objfiles;
 
-  /* With the addition of shared libraries, this should be modified,
-     the load time should be saved in the partial symbol tables, since
-     different tables may come from different source files.  FIXME.
-     This routine should then walk down each partial symbol table
-     and see if the symbol table that it originates from has been changed.  */
-
   ALL_OBJFILES (objfile)
     {
       if (objfile->obfd == NULL)
